--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 * Creation
-This is a free and open-source (FOSS) curation of creations.
+This is a free and open-source (FOSS) curation of creation archaea.
 
 | License | Discord server invite         |
 |---------+-------------------------------|
